# CocktailPro

./: .gitignore  2.3_Maßnahmen.txt  CMakeLists.txt  Jenkinsfile  TimePlan.xlsx  readme.md  ~$TimePlan.xlsx
cmake/: CocktailProCppCheck.cmake  CocktailProTest.cmake  Flags.cmake
model/: SE_CocktailProLegacy.mdzip  SWE.mdzip
src/main/: CocktailPro.cpp  CocktailPro.h  CocktailPro_BACKUP_1647.cpp  CocktailPro_BASE_1647.cpp  CocktailPro_LOCAL_1647.cpp  CocktailZubereiter.cpp  CocktailZubereiter.h  DeviceVerwalter.cpp  DeviceVerwalter.h  Dosierer.cpp  Dosierer.h  Entleerer.cpp  Entleerer.h  InternalDevice.cpp  InternalDevice.h  Main.cpp  MischbaresRezeptbuch.cpp  MischbaresRezeptbuch.h  Mixer.cpp  Mixer.h  Observer.h  Recipe.cpp  Recipe.h  RecipeBook.cpp  RecipeBook.h  RecipeStep.cpp  RecipeStep.h  Schuettler.cpp  Schuettler.h  Stampfer.cpp  Stampfer.h  Subject.cpp  Subject.h  Timer.cpp  Timer.h  VorhandeneZutaten.cpp  VorhandeneZutaten.h  Waage.cpp  Waage.h
src/resources/: zutaten.txt
src/test/: CocktailPro_Test.cpp  CocktailZubereiter_Test.cpp  DeviceVerwalter_Test.cpp  DosiererTest.cpp  Dosierer_Test.cpp  EntleererTest.cpp  Entleerer_Test.cpp  InternalDevice_Test.cpp  Main.cpp  MischbaresRezeptbuchTest.cc  MischbaresRezeptbuch_Test.cpp  Mixer_Test.cpp  RecipeBook_Test.cpp  RecipeStep_Test.cpp  Recipe_Test.cpp  Schuettler_Test.cpp  Stampfer_Test.cpp  Subject_Test.cpp  Timer_Test.cpp  VorhandeneZutaten_Test.cpp  WaageSubjectObserverTest.cpp  WaageSubjectObserver_Test.cpp  Waage_Test.cpp
